load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "statesync",
    srcs = [
        "completeterminal.cc",
        "user.cc",
    ],
    hdrs = [
        "completeterminal.h",
        "user.h",
    ],
    deps = [
        "//src/protobufs:hostinput_cc_proto",
        "//src/protobufs:transportinstruction_cc_proto",
        "//src/protobufs:userinput_cc_proto",
        "//src/terminal",
        "@linux_libs//:tinfo",
    ],
)
